--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     implementation 'org.openftc:easyopencv:1.5.2'
+    implementation 'org.openftc:apriltag:1.1.1'
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
